merge from json-branch